Fix overflow when the last line is a title

--- a/src/components/organisms/Editor/md_style.css
+++ b/src/components/organisms/Editor/md_style.css
@@ -9,12 +9,12 @@
 
 .md-h1 {
     font-size: 2em;
-    padding-bottom: 0.25em;
+    margin-bottom: 0.25em;
 }
 
 .md-h2 {
     font-size: 1.75em;
-    padding-bottom: 0.25em;
+    margin-bottom: 0.25em;
 }
 
 .md-h3 {
